Menghapus Rest API Yang Tidak Ada

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!-- Templete By indrijunanda, Theme Doraemon & Nobita, Terinsiprasi Dengan MhankBarBar -->
 <!DOCTYPE html>
 <html lang="en">
@@ -266,7 +265,6 @@ document.write(txt)
                   <h6 class="m-0 font-weight-bold text-light">Semua Fitur</h6>
                 </div>
                 <div class="card-body">
-                  <li class="mengetik"><b> Facebook </b></li>
                   <li class="mengetik"><b> YouTube Audio Downloader </b></li>
                   <li class="mengetik"><b> YouTube Video Downloader </b></li>
                   <li class="mengetik"><b> Brainly </b></li>
@@ -334,10 +332,10 @@ document.write(txt)
   </a>
   <!-- Akhir Code Scroll Untuk Keatas -->
 
-  <script src="https://indrijunanda.github.io/RuangAdmin/vendor/jquery/jquery.min.js"></script>
-  <script src="https://indrijunanda.github.io/RuangAdmin/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="https://indrijunanda.github.io/RuangAdmin/vendor/jquery-easing/jquery.easing.min.js"></script>
-  <script src="https://indrijunanda.github.io/RuangAdmin/js/ruang-admin.min.js"></script> 
+  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+  <script src="js/ruang-admin.min.js"></script> 
 </body>
 
 </html>
