Menambahkan Berita Covid-19

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <meta name="author" content="NaufalCream">
   <link href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSZic9yLoJTvQsxu6EZT3-skQteVZVIxuAq3A&usqp=CAU" rel="icon">
   <title>Rest API ~ NaufalCream</title>
-  <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-  <link href="css/ruang-admin.min.css" rel="stylesheet">
+  <link href="https://indrijunanda.github.io/RuangAdmin/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+  <link href="https://indrijunanda.github.io/RuangAdmin/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+  <link href="https://indrijunanda.github.io/RuangAdmin/css/ruang-admin.min.css" rel="stylesheet">
 </head>
 
 <body id="page-top">
@@ -41,7 +41,7 @@
           <i class="fas fa-fw fa-arrow-down"></i>
           <span>Sosmed API</span>
         </a>
-        <div id="collapseBootstrap" class="collapse" aria-labelledby="headingBootstrap" data-parent="#accordionSidebar">
+        <div id="collapseSosmed" class="collapse" aria-labelledby="headingSosmed" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
             <h6 class="collapse-header">Fitur Sosmed</h6>
             <a class="collapse-item" href="/api/ytmp3?url=https://youtu.be/XSxdCFDfdgs&apikey=ApiKeyInHere">YouTube Audio Downloader</a>
@@ -50,12 +50,12 @@
         </div>
       </li>
       <li class="nav-item">
-        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseForm" aria-expanded="true"
-          aria-controls="collapseForm">
+        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseEducational" aria-expanded="true"
+          aria-controls="collapseEducational">
           <i class="fas fa-fw fa-book"></i>
           <span>Educational API</span>
         </a>
-        <div id="collapseForm" class="collapse" aria-labelledby="headingForm" data-parent="#accordionSidebar">
+        <div id="collapseEducational" class="collapse" aria-labelledby="headingEducational" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
             <h6 class="collapse-header">Fitur Educational</h6>
             <a class="collapse-item" href="/api/brainly?soal=1x1&apikey=ApiKeyInHere">Brainly</a>
@@ -80,16 +80,29 @@
         </div>
       </li>
       <li class="nav-item">
-      	<a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseNulis" aria-expanded="true"
-      	  aria-controls="collapseNulis">
+      	<a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseInformation" aria-expanded="true"
+      	  aria-controls="collapseInformation">
       	  <i class="fas fa-fw fa-exclamation"></i>
       	  <span>Information API</span>
       	</a>
-      <div id="collapseNulis" class="collapse" aria-labelledby="headingNulis" data-parent="#accordionSidebar">
+      <div id="collapseInformation" class="collapse" aria-labelledby="headingInformation" data-parent="#accordionSidebar">
       	<div class="bg-white py-2 collapse-inner rounded">
       	  <h6 class="collapse-header">Fitur Information</h6>
       	  <a class="collapse-item" href="/api/infogempa?apikey=ApiKeyInHere">Info Gempa</a>
             <a class="collapse-item" href="/api/infotsunami?apikey=ApiKeyInHere">Info Tsunami</a>
+      	</div>
+      </div>
+      </li>
+      <li class="nav-item">
+      	<a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseCovid" aria-expanded="true"
+      	  aria-controls="collapseCovid">
+      	  <i class="fas fa-fw fa-exclamation-triangle"></i>
+      	  <span>Covid-19 API</span>
+      	</a>
+      <div id="collapseCovid" class="collapse" aria-labelledby="headingCovid" data-parent="#accordionSidebar">
+      	<div class="bg-white py-2 collapse-inner rounded">
+      	  <h6 class="collapse-header">Fitur Covid-19</h6>
+      	  <a class="collapse-item" href="/api/beritacovid19?apikey=ApiKeyInHere">Berita Covid-19</a>
       	</div>
       </div>
       </li>
@@ -280,6 +293,7 @@ document.write(txt)
                   <li class="mengetik"><b> Text To Speech </b></li>
                   <li class="mengetik"><b> Hastebin </b></li>
                   <li class="mengetik"><b> Remove Background </b></li>
+                  <li class="mengetik"><b> Berita Covid-19 </b></li>
                 </div>
               </div>
             </div>
@@ -332,10 +346,10 @@ document.write(txt)
   </a>
   <!-- Akhir Code Scroll Untuk Keatas -->
 
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-  <script src="js/ruang-admin.min.js"></script> 
+  <script src="https://indrijunanda.github.io/RuangAdmin/vendor/jquery/jquery.min.js"></script>
+  <script src="https://indrijunanda.github.io/RuangAdmin/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="https://indrijunanda.github.io/RuangAdmin/vendor/jquery-easing/jquery.easing.min.js"></script>
+  <script src="https://indrijunanda.github.io/RuangAdmin/js/ruang-admin.min.js"></script> 
 </body>
 
 </html>
