--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         Features
       </div>
       <li class="nav-item">
-        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseBootstrap"
-          aria-expanded="true" aria-controls="collapseBootstrap">
+        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseSosmed"
+          aria-expanded="true" aria-controls="collapseSosmed">
           <i class="fas fa-fw fa-arrow-down"></i>
           <span>Sosmed API</span>
         </a>
