Menambahkan Instagram Video/Foto Downloader

--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+
+
 <!-- Templete By indrijunanda, Theme Doraemon & Nobita, Terinsiprasi Dengan MhankBarBar -->
 <!DOCTYPE html>
 <html lang="en">
@@ -44,6 +46,7 @@
         <div id="collapseSosmed" class="collapse" aria-labelledby="headingSosmed" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
             <h6 class="collapse-header">Fitur Sosmed</h6>
+            <a class="collapse-item" href="/api/ig?url=https://www.instagram.com/p/CFoVkHlFP3n/?igshid=sz6giw37qp9f&apikey=ApiKeyInHere">Instagram Video/Foto Downloader</a>
             <a class="collapse-item" href="/api/ytmp3?url=https://youtu.be/XSxdCFDfdgs&apikey=ApiKeyInHere">YouTube Audio Downloader</a>
             <a class="collapse-item" href="/api/ytmp4?url=https://youtu.be/XSxdCFDfdgs&apikey=ApiKeyInHere">YouTube Video Downloader</a>
           </div>
@@ -102,7 +105,7 @@
       <div id="collapseCovid" class="collapse" aria-labelledby="headingCovid" data-parent="#accordionSidebar">
       	<div class="bg-white py-2 collapse-inner rounded">
       	  <h6 class="collapse-header">Fitur Covid-19</h6>
-      	  <a class="collapse-item" href="/api/beritacovid19?apikey=ApiKeyInHere">Berita Covid-19</a>
+      	  <a class="collapse-item" href="#">Berita Covid-19 [Error]</a>
       	</div>
       </div>
       </li>
@@ -278,6 +281,7 @@ document.write(txt)
                   <h6 class="m-0 font-weight-bold text-light">Semua Fitur</h6>
                 </div>
                 <div class="card-body">
+                  <li class="mengetik"><b> Instagram Video/Foto Downloader </b></li>
                   <li class="mengetik"><b> YouTube Audio Downloader </b></li>
                   <li class="mengetik"><b> YouTube Video Downloader </b></li>
                   <li class="mengetik"><b> Brainly </b></li>
@@ -293,7 +297,7 @@ document.write(txt)
                   <li class="mengetik"><b> Text To Speech </b></li>
                   <li class="mengetik"><b> Hastebin </b></li>
                   <li class="mengetik"><b> Remove Background </b></li>
-                  <li class="mengetik"><b> Berita Covid-19 </b></li>
+                  <li class="mengetik"><b> Berita Covid-19 [Error] </b></li>
                 </div>
               </div>
             </div>
