Menambahkan Random Pantun

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- Templete By indrijunanda, Theme Doraemon & Nobita, Terinsiprasi Dengan MhankBarBar -->
+<!-- Templete By indrijunanda, Theme Doraemon & Nobita, Terinsprasi Dengan MhankBarBar -->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -59,7 +59,7 @@
         <div id="collapseEducational" class="collapse" aria-labelledby="headingEducational" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
             <h6 class="collapse-header">Fitur Educational</h6>
-            <a class="collapse-item" href="/api/brainly?soal=1x1&apikey=ApiKeyInHere">Brainly</a>
+            <a class="collapse-item">Brainly [Error]</a>
             <a class="collapse-item" href="/api/wikipedia?q=ikan&apikey=ApiKeyInHere">Wikipedia</a>
             <a class="collapse-item" href="/api/nulis?text=hai&nama=NaufalCream&kelas=Noob&apikey=ApiKeyInHere">Nulis</a>
           </div>
@@ -77,6 +77,7 @@
             <a class="collapse-item" href="/api/quran?apikey=ApiKeyInHere">Random Ayat Al - Qur'an</a>
             <a class="collapse-item" href="/api/1cak?apikey=ApiKeyInHere">Random 1Cak</a>
             <a class="collapse-item" href="/api/quotes?apikey=ApiKeyInHere">Random Quotes</a>
+            <a class="collapse-item" href="/api/pantun?apikey=ApiKeyInHere">Random Pantun</a>
           </div>
         </div>
       </li>
@@ -103,9 +104,23 @@
       <div id="collapseCovid" class="collapse" aria-labelledby="headingCovid" data-parent="#accordionSidebar">
       	<div class="bg-white py-2 collapse-inner rounded">
       	  <h6 class="collapse-header">Fitur Covid-19</h6>
-      	  <a class="collapse-item" href="#">Berita Covid-19 [Error]</a>
+      	  <a class="collapse-item">Berita Covid-19 [Error]</a>
       	</div>
       </div>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePrimbon" aria-expanded="true"
+          aria-controls="collapsePrimbon">
+          <i class="fab fa-fw fa-gratipay"></i>
+          <span>Primbon API</span>
+        </a>
+        <div id="collapsePrimbon" class="collapse" aria-labelledby="headingPrimbon" data-parent="#accordionSidebar">
+          <div class="bg-white py-2 collapse-inner rounded">
+            <h6 class="collapse-header">Fitur Primbon</h6>
+            <a class="collapse-item" href="/api/artinama?nama=naufalcream&apikey=ApiKeyInHere">Arti Nama</a>
+			<a class="collapse-item" href="/api/jodoh?nama=naufal&pasangan=cream&apikey=ApiKeyInHere">Kalkulator Jodoh</a>
+          </div>
+        </div>
       </li>
       <li class="nav-item">
       	<a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseOthers" aria-expanded="true"
@@ -116,7 +131,7 @@
       	<div id="collapseOthers" class="collapse" aria-labelledby="headingOthers" data-parent="#accordionSidebar">
       	  <div class="bg-white py-2 collapse-inner rounded">
       	    <h6 class="collapse-header">Fitur Lainnya</h6>
-      	    <a class="collapse-item" href="#">Simsimi [Error]</a>
+      	    <a class="collapse-item">Simsimi [Error]</a>
       	    <a class="collapse-item" href="/api/chord?q=aku+bukan+boneka&apikey=ApiKeyInHere">Search Chord Guitar</a>
       	    <a class="collapse-item" href="/api/say?text=hai+gez&lang=id&apikey=ApiKeyInHere">Text To Speech</a>
       	    <a class="collapse-item" href="/api/hastebin?text=Hai&apikey=ApiKeyInHere">Hastebin</a>
@@ -282,12 +297,13 @@ document.write(txt)
                   <li class="mengetik"><b> Instagram Video/Foto Downloader </b></li>
                   <li class="mengetik"><b> YouTube Audio Downloader </b></li>
                   <li class="mengetik"><b> YouTube Video Downloader </b></li>
-                  <li class="mengetik"><b> Brainly </b></li>
+                  <li class="mengetik"><b> Brainly [Error] </b></li>
                   <li class="mengetik"><b> Wikipedia </b></li>
                   <li class="mengetik"><b> Nulis </b></li>
                   <li class="mengetik"><b> Random Ayat Al - Qur'an </b></li>
                   <li class="mengetik"><b> Random 1Cak </b></li>
                   <li class="mengetik"><b> Random Quotes </b></li>
+                  <li class="mengetik"><b> Random Pantun </b></li>
                   <li class="mengetik"><b> Simsimi [Error] </b></li>
                   <li class="mengetik"><b> Info Gempa </b></li>
                   <li class="mengetik"><b> Info Tsunami </b></li>
@@ -296,6 +312,8 @@ document.write(txt)
                   <li class="mengetik"><b> Hastebin </b></li>
                   <li class="mengetik"><b> Remove Background </b></li>
                   <li class="mengetik"><b> Berita Covid-19 [Error] </b></li>
+                  <li class="mengetik"><b> Arti Nama </b></li>
+                  <li class="mengetik"><b> Kalkulator Jodoh </b></li>
                 </div>
               </div>
             </div>
