Menambahkan Random Meme

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
             <a class="collapse-item" href="/api/1cak?apikey=ApiKeyInHere">Random 1Cak</a>
             <a class="collapse-item" href="/api/quotes?apikey=ApiKeyInHere">Random Quotes</a>
             <a class="collapse-item" href="/api/pantun?apikey=ApiKeyInHere">Random Pantun</a>
+            <a class="collapse-item" href="/api/meme?apikey=ApiKeyInHere">Random Meme</a>
           </div>
         </div>
       </li>
@@ -304,6 +305,7 @@ document.write(txt)
                   <li class="mengetik"><b> Random 1Cak </b></li>
                   <li class="mengetik"><b> Random Quotes </b></li>
                   <li class="mengetik"><b> Random Pantun </b></li>
+                  <li class="mengetik"><b> Random Meme </b></li>
                   <li class="mengetik"><b> Simsimi [Error] </b></li>
                   <li class="mengetik"><b> Info Gempa </b></li>
                   <li class="mengetik"><b> Info Tsunami </b></li>
