Simsimi Kembali Aktif:)

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- Templete By indrijunanda, Theme Doraemon & Nobita, Terinsprasi Dengan MhankBarBar -->
+<!-- Templete By indrijunanda, Theme Doraemon & Nobita, Terinspirasi Dengan MhankBarBar -->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -132,7 +132,7 @@
       	<div id="collapseOthers" class="collapse" aria-labelledby="headingOthers" data-parent="#accordionSidebar">
       	  <div class="bg-white py-2 collapse-inner rounded">
       	    <h6 class="collapse-header">Fitur Lainnya</h6>
-      	    <a class="collapse-item">Simsimi [Error]</a>
+      	    <a class="collapse-item" href="/api/simsimi?kata=hai&apikey=ApiKeyInHere">Simsimi</a>
       	    <a class="collapse-item" href="/api/chord?q=aku+bukan+boneka&apikey=ApiKeyInHere">Search Chord Guitar</a>
       	    <a class="collapse-item" href="/api/say?text=hai+gez&lang=id&apikey=ApiKeyInHere">Text To Speech</a>
       	    <a class="collapse-item" href="/api/hastebin?text=Hai&apikey=ApiKeyInHere">Hastebin</a>
@@ -306,7 +306,7 @@ document.write(txt)
                   <li class="mengetik"><b> Random Quotes </b></li>
                   <li class="mengetik"><b> Random Pantun </b></li>
                   <li class="mengetik"><b> Random Meme </b></li>
-                  <li class="mengetik"><b> Simsimi [Error] </b></li>
+                  <li class="mengetik"><b> Simsimi </b></li>
                   <li class="mengetik"><b> Info Gempa </b></li>
                   <li class="mengetik"><b> Info Tsunami </b></li>
                   <li class="mengetik"><b> Search Chord Guitar </b></li>
