--- a/index.html
+++ b/index.html
@@ -27,9 +27,13 @@
       </a>
       <hr class="sidebar-divider my-0">
       <li class="nav-item active">
-        <a class="nav-link" href="index.html">
-          <i class="fas fa-fw fa-tachometer-alt"></i>
-          <span>Dashboard</span></a>
+        <div class="theme-switch-wrapper">
+         <label class="theme-switch" for="checkbox">
+           <input type="checkbox" id="checkbox" />
+           <div class="slider round"></div>
+         </label>
+         <span>Enable Dark Mode!</span>
+        </div>
       </li>
       <hr class="sidebar-divider">
       <div class="sidebar-heading">
@@ -119,7 +123,7 @@
           <div class="bg-white py-2 collapse-inner rounded">
             <h6 class="collapse-header">Fitur Primbon</h6>
             <a class="collapse-item" href="/api/artinama?nama=naufalcream&apikey=ApiKeyInHere">Arti Nama</a>
-			<a class="collapse-item" href="/api/jodoh?nama=naufal&pasangan=cream&apikey=ApiKeyInHere">Kalkulator Jodoh</a>
+            <a class="collapse-item" href="/api/jodoh?nama=naufal&pasangan=cream&apikey=ApiKeyInHere">Kalkulator Jodoh</a>
           </div>
         </div>
       </li>
