Mengembalikan Seperti Semula!

--- a/index.html
+++ b/index.html
@@ -27,13 +27,9 @@
       </a>
       <hr class="sidebar-divider my-0">
       <li class="nav-item active">
-        <div class="theme-switch-wrapper">
-         <label class="theme-switch" for="checkbox">
-           <input type="checkbox" id="checkbox" />
-           <div class="slider round"></div>
-         </label>
-         <span>Enable Dark Mode!</span>
-        </div>
+        <a class="nav-link" href="/api">
+          <i class="fas fa-fw fa-tachometer-alt"></i>
+          <span>Documentation</span></a>
       </li>
       <hr class="sidebar-divider">
       <div class="sidebar-heading">
@@ -123,7 +119,7 @@
           <div class="bg-white py-2 collapse-inner rounded">
             <h6 class="collapse-header">Fitur Primbon</h6>
             <a class="collapse-item" href="/api/artinama?nama=naufalcream&apikey=ApiKeyInHere">Arti Nama</a>
-            <a class="collapse-item" href="/api/jodoh?nama=naufal&pasangan=cream&apikey=ApiKeyInHere">Kalkulator Jodoh</a>
+			<a class="collapse-item" href="/api/jodoh?nama=naufal&pasangan=cream&apikey=ApiKeyInHere">Kalkulator Jodoh</a>
           </div>
         </div>
       </li>
@@ -138,7 +134,7 @@
       	    <h6 class="collapse-header">Fitur Lainnya</h6>
       	    <a class="collapse-item" href="/api/simsimi?kata=hai&apikey=ApiKeyInHere">Simsimi</a>
       	    <a class="collapse-item" href="/api/chord?q=aku+bukan+boneka&apikey=ApiKeyInHere">Search Chord Guitar</a>
-      	    <a class="collapse-item" href="/api/say?text=hai+gez&lang=id&apikey=ApiKeyInHere">Text To Speech</a>
+      	    <a class="collapse-item">Text To Speech [Error]</a>
       	    <a class="collapse-item" href="/api/hastebin?text=Hai&apikey=ApiKeyInHere">Hastebin</a>
       	    <a class="collapse-item" href="/api/removebg?url=https://telegra.ph/file/1561b963be891f0f9c070.jpg&apikey=ApiKeyInHere">Remove Background</a>
       	  </div>
@@ -314,7 +310,7 @@ document.write(txt)
                   <li class="mengetik"><b> Info Gempa </b></li>
                   <li class="mengetik"><b> Info Tsunami </b></li>
                   <li class="mengetik"><b> Search Chord Guitar </b></li>
-                  <li class="mengetik"><b> Text To Speech </b></li>
+                  <li class="mengetik"><b> Text To Speech [Error] </b></li>
                   <li class="mengetik"><b> Hastebin </b></li>
                   <li class="mengetik"><b> Remove Background </b></li>
                   <li class="mengetik"><b> Berita Covid-19 [Error] </b></li>
@@ -350,7 +346,7 @@ document.write(txt)
           <!-- Akhir Code Logout -->
 
         </div>
-        <!--- Akhir Code Info User -->
+        <!--- Akhir Code Info User -->        
       </div>
       <!-- Tempat Copyright -->
       <footer class="sticky-footer bg-gradient-warning">
@@ -359,6 +355,8 @@ document.write(txt)
             <span>
               &copy; <script>document.write(new Date().getFullYear())</script> <b><a href="https://wa.me/+6283160761598">NaufalCream</a></b>
             </span>
+            <br>
+            <div align=center><br><b>Total Pengunjung Website : </b><img src="https://www.cutercounter.com/hits.php?id=hxkxoqx&nd=4&style=33" border="0" alt="NaufalCream API" width="67"></img></br></div>
           </div>
         </div>
       </footer>
