Menambahkan Spam Email

--- a/index.html
+++ b/index.html
@@ -124,6 +124,19 @@
         </div>
       </li>
       <li class="nav-item">
+        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseSpammer" aria-expanded="true"
+          aria-controls="collapseSpammer">
+          <i class="fa fa-fw fa-bomb"></i>
+          <span>Spammer API</span>
+        </a>
+        <div id="collapseSpammer" class="collapse" aria-labelledby="headingSpammer" data-parent="#accordionSidebar">
+          <div class="bg-white py-2 collapse-inner rounded">
+            <h6 class="collapse-header">Fitur Spammer</h6>
+            <a class="collapse-item" href="/api/spamgmail?email=username@email.com&jumlah=1&apikey=ApiKeyInHere">Spam Email</a>
+          </div>
+        </div>
+      </li>
+      <li class="nav-item">
       	<a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseOthers" aria-expanded="true"
       	  aria-controls="collapseOthers">
       	  <i class="fas fa-fw fa-leaf"></i>
@@ -316,6 +329,7 @@ document.write(txt)
                   <li class="mengetik"><b> Berita Covid-19 [Error] </b></li>
                   <li class="mengetik"><b> Arti Nama </b></li>
                   <li class="mengetik"><b> Kalkulator Jodoh </b></li>
+                  <li class="mengetik"><b> Spam Email </b></li>
                 </div>
               </div>
             </div>
