Menambahkan Fitur Spam!

--- a/index.html
+++ b/index.html
@@ -133,6 +133,8 @@
           <div class="bg-white py-2 collapse-inner rounded">
             <h6 class="collapse-header">Fitur Spammer</h6>
             <a class="collapse-item" href="/api/spamgmail?email=username@email.com&jumlah=1&apikey=ApiKeyInHere">Spam Email</a>
+            <a class="collapse-item" href="/api/spamsms?nomor=088888888888&jumlah=1&apikey=ApiKeyInHere">Spam SMS</a>
+            <a class="collapse-item" href="/api/spamwa?nomor=088888888888&jumlah=1&apikey=ApiKeyInHere">Spam Whatsapp</a>
           </div>
         </div>
       </li>
@@ -330,6 +332,8 @@ document.write(txt)
                   <li class="mengetik"><b> Arti Nama </b></li>
                   <li class="mengetik"><b> Kalkulator Jodoh </b></li>
                   <li class="mengetik"><b> Spam Email </b></li>
+                  <li class="mengetik"><b> Spam SMS </b></li>
+                  <li class="mengetik"><b> Spam Whatsapp </b></li>
                 </div>
               </div>
             </div>
