Add Mediafire Downloader

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
             <a class="collapse-item" href="/api/ig?url=https://www.instagram.com/p/CFoVkHlFP3n/?igshid=sz6giw37qp9f&apikey=ApiKeyInHere">Instagram Video/Foto Downloader</a>
             <a class="collapse-item" href="/api/ytmp3?url=https://youtu.be/XSxdCFDfdgs&apikey=ApiKeyInHere">YouTube Audio Downloader</a>
             <a class="collapse-item" href="/api/ytmp4?url=https://youtu.be/XSxdCFDfdgs&apikey=ApiKeyInHere">YouTube Video Downloader</a>
+            <a class="collapse-item" href="/api/mdl?url=http://www.mediafire.com/file/g6fdsjzeby97lw6/YOWA8.51_By.FouadMODS.apk/file&apikey=ApiKeyInHere">Mediafire Get Download Link</a>
           </div>
         </div>
       </li>
@@ -92,7 +93,7 @@
       	<div class="bg-white py-2 collapse-inner rounded">
       	  <h6 class="collapse-header">Fitur Information</h6>
       	  <a class="collapse-item" href="/api/infogempa?apikey=ApiKeyInHere">Info Gempa</a>
-            <a class="collapse-item" href="/api/infotsunami?apikey=ApiKeyInHere">Info Tsunami</a>
+      	  <a class="collapse-item" href="/api/infotsunami?apikey=ApiKeyInHere">Info Tsunami</a>
       	</div>
       </div>
       </li>
@@ -119,7 +120,7 @@
           <div class="bg-white py-2 collapse-inner rounded">
             <h6 class="collapse-header">Fitur Primbon</h6>
             <a class="collapse-item" href="/api/artinama?nama=naufalcream&apikey=ApiKeyInHere">Arti Nama</a>
-            <a class="collapse-item" href="/api/jodoh?nama=naufal&pasangan=cream&apikey=ApiKeyInHere">Kalkulator Jodoh</a>
+			<a class="collapse-item" href="/api/jodoh?nama=naufal&pasangan=cream&apikey=ApiKeyInHere">Kalkulator Jodoh</a>
           </div>
         </div>
       </li>
@@ -134,6 +135,7 @@
             <h6 class="collapse-header">Fitur Spammer</h6>
             <a class="collapse-item" href="/api/spamgmail?email=username@email.com&jumlah=1&apikey=ApiKeyInHere">Spam Email</a>
             <a class="collapse-item" href="/api/spamsms?nomor=088888888888&jumlah=1&apikey=ApiKeyInHere">Spam SMS</a>
+            <a class="collapse-item" href="/api/spamcall?nomor=088888888888&jumlah=1&apikey=ApiKeyInHere">Spam Call</a>
             <a class="collapse-item" href="/api/spamwa?nomor=088888888888&jumlah=1&apikey=ApiKeyInHere">Spam Whatsapp</a>
           </div>
         </div>
@@ -152,6 +154,7 @@
       	    <a class="collapse-item">Text To Speech [Error]</a>
       	    <a class="collapse-item" href="/api/hastebin?text=Hai&apikey=ApiKeyInHere">Hastebin</a>
       	    <a class="collapse-item" href="/api/removebg?url=https://telegra.ph/file/1561b963be891f0f9c070.jpg&apikey=ApiKeyInHere">Remove Background</a>
+      	    <a class="collapse-item" href="/api/shorturl?url=http://api.naufalhosting.com&apikey=ApiKeyInHere">Shorturl</a>
       	  </div>
       	</div>
       </li>
@@ -313,6 +316,7 @@ document.write(txt)
                   <li class="mengetik"><b> Instagram Video/Foto Downloader </b></li>
                   <li class="mengetik"><b> YouTube Audio Downloader </b></li>
                   <li class="mengetik"><b> YouTube Video Downloader </b></li>
+                  <li class="mengetik"><b> Mediafire Get Download Link </b></li>
                   <li class="mengetik"><b> Brainly [Error] </b></li>
                   <li class="mengetik"><b> Wikipedia </b></li>
                   <li class="mengetik"><b> Nulis </b></li>
@@ -333,7 +337,9 @@ document.write(txt)
                   <li class="mengetik"><b> Kalkulator Jodoh </b></li>
                   <li class="mengetik"><b> Spam Email </b></li>
                   <li class="mengetik"><b> Spam SMS </b></li>
+                  <li class="mengetik"><b> Spam Call </b></li>
                   <li class="mengetik"><b> Spam Whatsapp </b></li>
+                  <li class="mengetik"><b> Shorturl </b></li>
                 </div>
               </div>
             </div>
